--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -10,86 +10,90 @@
       <h1>Contact Form</h1>
     </ion-text>
   </ion-item>
-
-  <!-- <form [formGroup]="form" (ngSubmit)="saveDetails(form.value)">
-
-    <ion-item margin-bottom>
-      <ion-label position="floating">Your Name</ion-label>
-      <ion-input type="text" [formControl]="form.controls['name']"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Apellidos</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Repetir Contraseña</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Telefono</ion-label>
-      <ion-input inputmode="tel"></ion-input>
-    </ion-item>
-    
-    <ion-button expand="block" type="submit">Enviar</ion-button>
-
-    <ion-item float-right lines="none">
-      <ion-button color="primary" text-center block [disabled]="!form.valid">Save Details</ion-button>
-    </ion-item>
-  </form>
- -->
-
+  
  <form [formGroup]="registrationForm" (ngSubmit)="submit()">
   <ion-list>
     <ion-item>
       <ion-label position="floating">Name</ion-label>
       <ion-input autocapitalize inputmode="text" formControlName="name"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.name">
+      <div *ngIf="name.hasError(error.type) && (name.dirty || name.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
     <ion-item>
       <ion-label position="floating">Phone</ion-label>
       <ion-input inputmode="tel" formControlName="phone"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.phone">
+      <div *ngIf="phone.hasError(error.type) && (phone.dirty || phone.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
     <ion-item>
       <ion-label position="floating">Email</ion-label>
       <ion-input inputmode="email" formControlName="email"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.email">
+      <div *ngIf="email.hasError(error.type) && (email.dirty || email.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
   </ion-list>
+
   <ion-list formGroupName="address">
+
     <ion-list-header>
       <ion-label>Address</ion-label>
     </ion-list-header>
+
     <ion-item>
       <ion-label position="floating">Street</ion-label>
       <ion-input formControlName="street"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.street">
+      <div *ngIf="street.hasError(error.type) && (street.dirty || street.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
     <ion-item>
       <ion-label position="floating">City</ion-label>
       <ion-input formControlName="city"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.city">
+      <div *ngIf="city.hasError(error.type) && (city.dirty || city.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
     <ion-item>
       <ion-label position="floating">State</ion-label>
       <ion-input formControlName="state"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.state">
+      <div *ngIf="state.hasError(error.type) && (state.dirty || state.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
     <ion-item>
       <ion-label position="floating">Zip Code</ion-label>
       <ion-input formControlName="zip"></ion-input>
     </ion-item>
+    <div *ngFor="let error of errorMessages.zip">
+      <div *ngIf="zip.hasError(error.type) && (zip.dirty || zip.touched)" class="error-container">
+        <small class="error-message"><ion-icon name="information-circle-outline"></ion-icon> {{error.message}}</small>
+      </div>
+    </div>
+
   </ion-list>
-  <ion-button [disabled]="!registrationForm.valid" type="submit" expand="block">Submit <ion-icon slot="end"
-      name="create">
-    </ion-icon>
+
+  <ion-button [disabled]="!registrationForm.valid" type="submit" expand="block">Submit 
+    <ion-icon slot="end"name="create"></ion-icon>
   </ion-button>
 </form>
 
