--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -15,7 +15,7 @@
   <ion-toolbar>
     <ion-searchbar 
       (ionInput)="onInput($event)"
-      placeholder="Buscar bebidas"
+      placeholder="Buscar drinks"
     ></ion-searchbar>
   </ion-toolbar>
 
